@@ -6,9 +6,14 @@ name := "micrometer-pekko"
 
 ThisBuild / scalaVersion := "2.13.18"
 
-ThisBuild / crossScalaVersions := Seq("2.12.21", "2.13.18", "3.3.8")
+// pekko 2.0.0-M4 is not published for Scala 2.12
+ThisBuild / crossScalaVersions := Seq("2.13.18", "3.3.8")
 
-scalacOptions += "-target:jvm-1.8"
+// pekko 2.0.0-M4 ships Java 17 bytecode, so the old -target:jvm-1.8 cannot be honoured. -release also
+// checks the code against the Java 17 platform API rather than only setting the bytecode version, and
+// unlike -target it is understood by both Scala 2 and Scala 3 (Scala 3 ignored -target:jvm-1.8 with a
+// warning).
+scalacOptions ++= Seq("-release", "17")
 
 val scalaReleaseVersion = SettingKey[Int]("scalaReleaseVersion")
 scalaReleaseVersion := {
@@ -23,7 +28,7 @@ def sysPropOrDefault(propName: String, default: String): String = Option(System.
   case _ => default
 }
 
-val pekkoVersion = "1.7.0"
+val pekkoVersion = "2.0.0-M4"
 val aspectjweaverVersion = "1.9.25.1"
 val micrometerVersion = "1.17.1"
 
@@ -71,6 +76,11 @@ logBuffered := false
 
 Test / javaOptions += s"""-Dconfig.resource=${sysPropOrDefault("config.resource", "application.conf")}"""
 
+// pekko 2.0.0-M4's artery pulls agrona 2.x, whose UnsafeApi reads jdk.internal.misc.Unsafe rather than
+// sun.misc.Unsafe. JDK 17 does not export that package to the unnamed module, so remoting fails to
+// initialise with an IllegalAccessError before this flag. pekko 1.7.0 pulls agrona 1.x and needs nothing.
+Test / javaOptions += "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"
+
 publishMavenStyle := true
 
 Test / publishArtifact := false
@@ -101,8 +111,8 @@ pomExtra := (
   </developers>
 )
 
-ThisBuild / githubWorkflowJavaVersions := Seq(
-  JavaSpec(Temurin, "8"), JavaSpec(Temurin, "17"))
+// pekko 2.0.0-M4 requires Java 17, so the Java 8 job cannot run against it
+ThisBuild / githubWorkflowJavaVersions := Seq(JavaSpec(Temurin, "17"))
 ThisBuild / githubWorkflowTargetTags ++= Seq("v*")
 ThisBuild / githubWorkflowPublishTargetBranches := Seq(
   RefPredicate.Equals(Ref.Branch("main")),
